# recoil_effects_in_parton_showers

./: .gitignore  README.md
Exercises/: main.ipynb  monte_carlo.py
code/: event_analysis.py  four_vector.py  plotting.py  recoil.py  run.py  run_different_cone_angles.py  run_examples.py  running_coupling_shower.py  shower.py  shower_energy_gap_fraction.py  thrust.py  transform.py
new/: event_analysis.py  four_vector.py  recoil.py  run_different_cuts.py  shower.py  shower_large_energy_limit.py
thrust_acceleration_code/: Cargo.toml  pyproject.toml
thrust_acceleration_code/src/: lib.rs
